# DSM-tools

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini
.github/workflows/: static.yml
docs/: dsmtools.html  index.html  search.js
docs/dsmtools/: __init__.html  modeling.html  preprocessing.html  utils.html
docs/dsmtools/modeling/: AE.html  HAN.html  data_prep.html  model_abstract.html
docs/dsmtools/preprocessing/: neuron_tree.html  sequencing.html  swc_qc.html
docs/dsmtools/utils/: ccf_atlas.html  misc.html  swc.html
docs/dsmtools/utils/ccf_atlas/: _annotation.html  _image.html  annotation.html  image.html
examples/: generate_dataset.py  run_prediction.py  run_training.py
examples/output/: ae_checkpoint.h5  dataset.pickle  han_checkpoint.h5
sample_data/swc/: 17300_6010_x23413_y13446.swc  17302_00001.swc  17545_00168.swc  17545_00169.swc
src/dsmtools/: __init__.py  title_page.md
src/dsmtools/modeling/: AE.py  HAN.py  __init__.py  data_prep.py  model_abstract.py  modeling_guide.md  w2v_model_6dim_from_1200_seu.model
src/dsmtools/models/: HAN_1282_SEU.h5
src/dsmtools/preprocessing/: __init__.py  neuron_tree.py  preprocessing_guide.md  sequencing.py  swc_qc.py
src/dsmtools/utils/: __init__.py  misc.py  swc.py
src/dsmtools/utils/ccf_atlas/: __init__.py  _annotation.py  _image.py  annotation.py  bs_level.csv  dict_to_selected.json  image.py
tests/: test_swc_related.py  tree_related.py
tests/data/swc/: 17302_00057.swc  17302_00112.swc  17545_00093.swc  17545_00094.swc  17545_00095.swc  17545_00166.swc
