[build-system]
requires = [ "setuptools", "setuptools-scm" ]
build-backend = "setuptools.build_meta"

[project]
name = "DSM-tools"
dynamic = [ "version" ]
keywords = [ "neuron", "morphology", "HAN", "autoencoder" ]
authors = [
    { name = "Feng Xiong" },
    { name = "Zuo-Han Zhao", email = "zzhmark@126.com" }
]
description = """A python package for DSM utilities, which \
    make seuences out of neuron SWC and use deep learning models to encode neurons and \
    predict their types."""
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT License" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "tensorflow",
    "pandas",
    "scikit-learn",
    "importlib_resources",
    "gensim",
    "SimpleITK",
    "matplotlib"
]

[project.urls]
"GitHub Project" = "https://github.com/xiongfengNJ/DSM-tools"
"Exhibition & Online Tools" = "http://101.43.104.173:8501"
"Data Server" = "http://101.43.104.173:8500/"
"Experiment Code" = "https://github.com/xiongfengNJ/neuron2seq"

[project.optional-dependencies]
test = [ "pytest", "pytest-xdist" ]
docs = [ "pdoc" ]

[tool.setuptools_scm]